<resources>
    <string name="app_name">Practicum-Android-Diploma</string>
    <string name="team">Команда</string>
    <string name="title_team_fragment">Над приложением работали</string>
    <string name="vitaly">Виталий Черепаха</string>
    <string name="artyom">Артём Шевердяев </string>
    <string name="igor">Игорь Ячменёв</string>
    <string name="andrey">Андрей Киреенко</string>
    <string name="ivan">Иван Мизяков</string>
    
    <string name="menu_main">Главная</string>
    <string name="menu_favorites">Избранное</string>
    <string name="menu_team">Команда</string>
    <string name="vacancy_search">Поиск вакансий</string>
    <string name="search_filter">фильтр поиска</string>
    <string name="enter_the_query">Введите запрос</string>
    <string name="search_icon_description">иконка поиска</string>
    <string name="clear_icon_description">иконка очистки</string>
    <string name="intro_search_picture">картинка поиска</string>
    <string name="placeholder_picture">изображение плейсхолдера</string>
    <string name="pictures_ratio">328:223</string>
    <string name="not_found_vacancies">Не удалось получить список вакансий</string>
    <string name="no_internet">Нет интернета</string>
    <string name="no_query_vacancies">Таких вакансий нет</string>
    <string name="vacancy_logo">логотип вакансии</string>
    
    <string name="SettingFilters">Настройки фильтрации</string>
    <string name="PlaceWork">Выбор места работы</string>
    <string name="CoutryWork">Выбор страны</string>
    <string name="place_of_work">Место работы</string>
    <string name="industry">Отрасль</string>
    <string name="enter_salary">Введите сумму</string>
    <string name="expected_salary">Ожидаемая ЗП</string>
    <string name="not_show_without_sallary">Не показывать без ЗП</string>
    <string name="geolocation_enabled_checkbox">Показать вакансии рядом со мной</string>
    <string name="apply">Применить</string>
    <string name="reset">Сбросить</string>
    
    <string name="unknown_viewholder_create">Unknown ViewHolder type for create</string>
    <string name="unknown_viewholder_bind">Unknown ViewHolder type for bind</string>
    <string name="vacancy_details">Вакансия</string>
    <string name="vacancy_to_fav">иконка: вакансия в избранном</string>
    <string name="vacancy_share">иконка: поделиться вакансией</string>
    <string name="experience">Требуемый опыт</string>
    <string name="vacancy_info">Описание вакансии</string>
    <string name="vacancy_key_skills">Ключевые навыки</string>
    <string name="vacancy_not_found_or_delete">Вакансия не найдена или удалена</string>
    <string name="server_error">Ошибка сервера</string>
    <string name="not_found_list">Не удалось получить список</string>
    <string name="favorite_list_empty">Список пуст</string>
    <string name="region_not_found">Такого региона нет</string>
    <string name="favourites">Избранное</string>
    <string name="list_empty">Список пуст</string>
    <string name="search_result_info">Найдена %d вакансия | Найдены %d вакансии | Найдено %d вакансий</string>
    <string name="cant_add_to_favorite">Невозможно сохранить в избранное</string>
    <string name="no_apps_for_text_sending">На устройстве нет приложений для отправки текста!</string>
    <string name="cant_share">Невозможно поделиться вакансией</string>
    <string name="industry_select">Выбор отрасли</string>
    <string name="select">Выбрать</string>
    <string name="enter_industry_query">Введите отрасль</string>
    <string name="country">Страна</string>
    <string name="region">Регион</string>
    <string name="region_select">Выбор региона</string>
    <string name="city">Город</string>
    <string name="city_select">Выбор города</string>
    <string name="enter_region_query">Введите регион</string>
    <string name="element_arrow">кнопка-стрелочка</string>
    <string name="element_cross">кнопка-крестик элемента</string>
    <string name="rub">руб</string>
    <string name="salary_to_high">Зарплата %s слишком высока! Уменьшите свои амбиции.</string>
    <string name="industry_not_found">Такой отрасли нет</string>
    <string name="enter_city_query">Введите город</string>
    <string name="city_not_found">Такого города нет</string>
    <string name="share_dialog_title">Выберите с кем поделиться этой вакансией</string>
    <string name="check_internet_connection">Проверьте подключение к интернету</string>
    <string name="error_happens">Произошла ошибка</string>
</resources>
