<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/ivPlaceholderPicture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/placeholder_picture"
        android:scaleType="fitCenter"
        android:visibility="visible"
        app:layout_constrainedWidth="true"
        app:layout_constraintDimensionRatio="@string/pictures_ratio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="phPicture"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/placeholder_not_found_picture" />

    <TextView
        android:id="@+id/tvPlaceholderText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_30"
        android:layout_marginTop="@dimen/margin_16"
        android:gravity="center"
        android:textAppearance="@style/TextMedium_22size_500weight"
        android:textColor="?attr/elementColor_black_white"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTag="phText"
        app:layout_constraintTop_toBottomOf="@id/ivPlaceholderPicture"
        android:text="@string/not_found_vacancies" />

</androidx.constraintlayout.widget.ConstraintLayout>
