<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/search_container_background"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_marginVertical="@dimen/margin_8">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etSearchQueryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:hint="@string/enter_the_query"
        android:textColorHint="?attr/elementColor_gray_white"
        android:textColor="@color/black"
        android:inputType="text"
        android:singleLine="true"
        android:ellipsize="end"
        android:textCursorDrawable="@drawable/text_cursor"
        android:textAppearance="@style/TextRegular_16size_400weight"
        android:layout_marginVertical="@dimen/margin_18"
        android:layout_marginStart="@dimen/margin_16" />

    <ImageView
        android:id="@+id/ivSearchIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_8"
        android:contentDescription="@string/search_icon_description"
        android:src="@drawable/search"
        android:visibility="visible"/>

    <ImageView
        android:id="@+id/ivClearIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_8"
        android:contentDescription="@string/clear_icon_description"
        android:src="@drawable/clear"
        android:visibility="gone"/>

</LinearLayout>
